--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,3 +2,7 @@
   text-align: center;
   font-family: Roboto, sans-serif;
 }
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  opacity: 0;
+}
